<?xml version="1.0" encoding="utf-8"?>

<ru.bukvica.views.StartView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/start_layout"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:padding="@dimen/padding">
    <TableRow android:id="@+id/start_continue_row" style="@style/start_row">
        <TextView android:id="@+id/start_continue_symbol" android:text="@string/start_continue_symbol" style="@style/start_symbol"/>
        <TextView android:text="@string/start_games_list" style="@style/start_text"
                  android:id="@+id/start_continue_text"/>
    </TableRow>
    <TableRow android:id="@+id/start_newgame_row" style="@style/start_row">
        <TextView android:id="@+id/start_newgame_symbol" android:text="@string/start_newgame_symbol" style="@style/start_symbol"/>
        <TextView android:text="@string/start_game" style="@style/start_text" android:id="@+id/start_newgame_text"/>
    </TableRow>
    <RadioGroup android:id="@+id/start_game_type" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"  android:layout_column="1"
        android:gravity="right">
        <RadioButton android:id="@+id/start_rbutton_device" android:text="@string/start_rbutton_dev" style="@style/start_rbutton" android:checked="true"/>
        <RadioButton android:id="@+id/start_rbutton_human" android:text="@string/start_rbutton_human" style="@style/start_rbutton"/>
        <RadioButton android:id="@+id/start_rbutton_network" android:text="@string/start_rbutton_net" style="@style/start_rbutton" android:enabled="false"/>
    </RadioGroup>
    <TableRow android:id="@+id/start_options_row" style="@style/start_row">
        <TextView android:id="@+id/start_options_symbol" android:text="@string/start_options_symbol" style="@style/start_symbol"/>
        <TextView android:text="@string/start_options" style="@style/start_text" android:id="@+id/start_options_text"/>
    </TableRow>
    <TableRow android:id="@+id/start_exit_row" style="@style/start_row">
        <TextView android:id="@+id/start_exit_symbol" android:text="@string/start_exit_symbol" style="@style/start_symbol"/>
        <TextView android:text="@string/start_exit_game" style="@style/start_text" android:id="@+id/start_exit_text"/>
    </TableRow>
</ru.bukvica.views.StartView>