<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="fill_horizontal|center_vertical" android:weightSum="7"
        android:id="@+id/help_overlay2" android:padding="@dimen/padding">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/help_overlay_rule1"
        android:gravity="center|fill_vertical"
              android:layout_gravity="left"
              style="@style/help_overlay_tv_style"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/help_overlay_rule2"
        android:layout_weight="1"
              android:gravity="center|fill_vertical"
              android:layout_gravity="left"
              style="@style/help_overlay_tv_style"
        android:singleLine="false" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/help_overlay_rule3"
        android:layout_weight="1" android:gravity="center|fill_vertical"
              android:layout_gravity="left"
              style="@style/help_overlay_tv_style"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/help_overlay_rule4"
        android:layout_weight="1" android:gravity="center|fill_vertical"
              style="@style/help_overlay_tv_style"
        android:layout_gravity="left" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/help_overlay_rule5"
        android:layout_weight="1"
              android:gravity="center|fill_vertical"
              android:layout_gravity="left"
              style="@style/help_overlay_tv_style"/>
</LinearLayout>